# ctas7-command-center

./: .env.bak  .env.bak2  .env.example  .gitattributes  .gitignore  .mcp.json  ABE-DUAL-LAYER-QA-ARCHITECTURE.md  ABE_EXECUTION_COMPLETE.md  ABE_STACK_CURRENT_STATE.md  ABE_STARTUP_ARCHIVE_ORGANIZATION.md  ADMIN_DOCUMENT_EEI_SPECIFICATION.md  AGENTS_AND_REPOS_STATUS.md  AGENT_DESIGN_STUDIO_PLAN.md  AGENT_DESIGN_STUDIO_TASK_TO_DEPLOYMENT_ARCHITECTURE.md  AGENT_DESIGN_STUDIO_UPDATED_PLAN.md  AGENT_MESH_DEPLOYMENT_PLAN.md  AGENT_WORKFLOW_LINEAR_CURRENT_STATE.md  ARCHAEOLOGICAL_CASE_STUDY_PYTHON_DISASTER.md  ARCHITECTURE_LAYERS_CLARIFIED.md  AUTO_COMMIT_SETUP.md  BAR_NAPKIN_ENGINEERING_RESEARCH_PAPER.md  BEDTIME_STATUS.md  BESLAN_OSINT_EXPERIMENT.md  BLAKE3_TO_MURMUR3_MITIGATION_PLAN.md  BNE_BUDGET_STRESS_TEST.md  BNE_HIGH_GPU_STRESS_TEST.md  BNE_VALIDATION_COMPLETE.md  BOLT_ON_GIS_ARCHITECTURE.md  CANONICAL_BACKEND_SPECIFICATION.md  CESIUM_FUSION_WORLD_CONTAINER_PLAN.md  CESIUM_GIS_INSTALLATION_KIT.md  CESIUM_INTEGRATION_COMPLETE.md  CESIUM_INTEGRATION_SUCCESS.md  CESIUM_INTEGRATION_SUMMARY.md  CESIUM_INTERFACE_FIX_LIST.md  CESIUM_LOGIC_AUDIT.md  CESIUM_SATELLITE_MOTION_ISSUE.md  CESIUM_WORKING.md  COGNETIX_PLC_ANALYSIS.md  COGNITIVE_FOUNDATION_ARCHITECTURE.md  (+271 more)
Combinatorial Optimizaton/: Cargo.toml  Hmm_Personas  Layer2-Method.md  README.md  combinatorial_optimization.md  ctas-t.code-workspace  test_scenarios.rs  unified_layer2_system.rs
agent-studio/gateway/: Cargo.toml  Dockerfile  gateway.rs
ctas-dioxus-docs/: APPLE_STYLE_PRODUCT_PAGES.md  CLAUDE_ANSWERS_SUMMARY.md  COMPLETE_FEATURES.md  Cargo.toml  DIOXUS_SUPERADMIN_BRIEFING.md  FEATURES.md  HFT_STARTER_PROJECT.md  INTRANET_ARCHITECTURE.md  QUESTIONS_FOR_CLAUDE_AGENT.md  README.md  RUST_BACKEND_ARCHITECTURE.md  VALENCE_JUMP_INTRANET_BUILD.md
ctas-dioxus-docs/assets/: docs-styles.css  styles.css
ctas-dioxus-docs/design-prototypes/: 01-smart-crate-registry.html  02-product-page-laser-light.html  03-neural-mux-dashboard.html  04-mobile-navigation.html  05-crate-registry-ops-style.html  06-real-ops-style.html  07-product-page-mcp.html  README.md
ctas-dioxus-docs/docs/: index.md  sidebar.json
ctas-dioxus-docs/products/: laser-light-communications.md
ctas-dioxus-docs/src/: figma_export.rs  lib.rs  main.rs  markdown_loader.rs  markdown_table.rs  mermaid_renderer.rs  neural_mux_client.rs  routes.rs
ctas-dioxus-docs/src/components/: hash_visualizer.rs  lazy_markdown_page.rs  link_updater.rs  markdown_renderer.rs  mod.rs  neural_mux_status.rs  sidebar.rs  spec_renderer.rs  system_topology.rs
ctas7-intelligence-generator/: COGNIGRAPH_IPAD_PLANNING_TOOL.md  COGNIGRAPH_PACKET_LEVEL_VISION.md  COGNIGRAPH_TACTICAL_PLANNING_WITH_MASKS.md  CONVERGENCE_METER_ENTROPY.md  CTAS7_Cybersecurity_Intelligence_Platform.md  Cargo.toml  DATABASE_ARCHITECTURE_COMPLETE.md  ELECTRIC_FOOTBALL_INTELLIGENCE.md  EXECUTION_STATUS.md  FINAL_DATABASE_ARCHITECTURE.md  GENERATION_COMPLETE_SUMMARY.md  HFT_CONVERGENCE_INTEGRATION.md  INTELLIGENCE_GENERATOR_REALIZATION.md  LEGAL_API_SETUP.md  MONTE_CARLO_VALIDATION_FRAMEWORK.md  OPERATOR_BEHAVIORAL_PROFILING.md  PLASMA_HFT_WAZUH_REVELATION.md  PRODUCT_LINEUP_POST_INTERVIEWS.md  README.md  SESSION_COMPLETE_SUMMARY.md  SLOTGRAPH_EXPLAINED.md  TUNING_THE_CONVERGENCE_METER.md  abe_high_gpu_pipeline.py  abe_ingest_orbital_stations.py  abe_monitor.py  alienvault_otx_intelligence.py  analyze_telegeography_tech.py  complete_intelligence_demonstration.py  comprehensive_threat_hunting_platform.py  congress_api_integration.py  create_ctas_globe.py  crowdstrike_threat_intelligence.py  ctas7_cybermap.py  cybersecurity_streams_plasma.py  database_separation_config.json  datagov_integration.py  datagov_playwright_crawler.py  datagov_usim_interface.py  deduplicate_and_validate.py  doj_realtime_intelligence.py  (+41 more)
ctas7-intelligence-generator/ctas7_globe_data/: cable_landings.geojson  cesium_integration.js  fso_links.json  laser_stations.geojson  osint_nodes.geojson  satellites.json  submarine_cables.geojson
ctas7-intelligence-generator/generated_interviews/: execution_manifest.json
ctas7-intelligence-generator/generated_interviews/crates/: ctas7-cesium-mcp.toml  ctas7-document-manager.toml  ctas7-enhanced-geolocation.toml  ctas7-foundation-core.toml  ctas7-foundation-data.toml  ctas7-foundation-math.toml  ctas7-foundation-orbital.toml  ctas7-foundation-voice.toml  ctas7-gis-cesium.toml  ctas7-groundstations-hft.toml  ctas7-hashing-engine.toml  ctas7-intelligence-generator.toml  ctas7-layer2-mathematical-intelligence.toml  ctas7-linear-integration.toml  ctas7-network-world.toml  ctas7-orbital-mechanics.toml  ctas7-plasma-wazuh.toml  ctas7-repoagent.toml  ctas7-space-world.toml  ctas7-voice-gateway.toml
ctas7-intelligence-generator/generated_interviews/nodes/: uuid-001-000-000-A.toml  uuid-002-000-000-A.toml  uuid-003-000-000-A.toml  uuid-004-000-000-A.toml  uuid-005-000-000-A.toml  uuid-006-000-000-A.toml  uuid-007-000-000-A.toml  uuid-008-000-000-A.toml  uuid-009-000-000-A.toml  uuid-010-000-000-A.toml  (+155 more)
ctas7-intelligence-generator/kml_infrastructure/: cable_landing_stations.geojson  cable_landing_stations.kml  cell_towers_sample.csv  fetch_manifest.json  internet_exchanges.json  submarine_cables.geojson
ctas7-intelligence-generator/src/: main.rs
ctas7-intelligence-generator/telegeography_analysis/: IMPLEMENTATION_GUIDE.md  page_source.html  tech_stack_analysis.json
ctas7-intelligence-generator/telegeography_data/: analytics.json  cables_processed.json  cables_raw.json  landing_points_processed.json  landing_points_raw.json  osint_cable_nodes.json  submarine_cable_landing_points_2025.kml
ctas7-intelligence-generator/templates/: cybermap.html
ctas7-voice-enterprise/: .env.example  README.md  pyproject.toml
neural-mux-scaffold/: Cargo.toml  README.md
neural-mux-scaffold/examples/: cognetix_plc_spec.yaml  satellite_network_spec.yaml
neural-mux-scaffold/src/: main.rs  neural_mux.rs  quality_gates.rs  scaffold.rs  swift_gen.rs  templates.rs  validators.rs
neural-mux-scaffold/templates/: README.md.tera
(+411 files in other folders)
