[package]
name = "smart-crate-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"
dotenvy = "0.15"
azure_speech = "0.2"
ctas-core-foundation = { path = "/Users/cp5337/Developer/HOLD DURING REORG/ctas-6-6-mono/crates/ctas-core-foundation" }