[package]
name = "ctas7-voice-check"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice_system_check"
path = "voice_system_check.rs"

[[bin]]
name = "surreal_telemetry_live"
path = "mcp/nodes/surreal_telemetry_live.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# SurrealDB dependencies
surrealdb = "2.3"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"

# Voice system dependencies
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1.0"

# QA Integration (temporarily disabled for telemetry testing)
# ctas7-qa-analyzer = { path = "../ctas-7-shipyard-staging/ctas7-qa-analyzer", package = "ctas7-phd-analyzer" }