[package]
name = "ctas-dioxus-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-logger = "0.5"

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false }

# Syntax highlighting
syntect = "5.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for loading markdown files
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"

# Link updating
regex = "1.10"
pathdiff = "0.2"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "ctas-docs"
path = "src/main.rs"
