[package]
name = "ctas7-intelligence-generator"
version = "7.3.1"
edition = "2021"
authors = ["CTAS-7 Team <team@synaptix.ai>"]
description = "CTAS-7 Intelligence Generator - Hash-driven operational intelligence system"
license = "MIT OR Apache-2.0"

[dependencies]
# Foundation
ctas7-foundation-core = { path = "../../ctas-7-shipyard-staging/ctas7-foundation-core" }
ctas7-foundation-data = { path = "../../ctas-7-shipyard-staging/ctas7-foundation-data" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sled = "0.34"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Hashing
murmur3 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Templating
tera = "1.19"
handlebars = "5.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI Integration (optional)
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "generate-intelligence"
path = "src/main.rs"

[[bin]]
name = "ctas7-intel"
path = "src/main.rs"

[[bench]]
name = "interview_generation"
harness = false

