[package]
name = "ctas7-agent-gateway"
version = "7.1.1"
edition = "2021"

[[bin]]
name = "gateway"
path = "gateway.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["trace"] }
